codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__mcp_server_elicitation__tests__mcp_server_elicitation_approval_form_with_param_summary.snap
---
source: tui/src/bottom_pane/mcp_server_elicitation.rs
expression: "render_snapshot(&overlay, Rect::new(0, 0, 120, 16))"
---
                                                                                                                        
  Поле 1/1                                                                                                             
  Разрешить Календарю создать событие                                                                                     
                                                                                                                        
  Календарь: primary                                                                                                     
  Название: Обзор дорожной карты                                                                                                 
  Заметки: Это специально длинная заметка: она должна обрезаться до того, как пре...                                                   
                                                                                                                        
  › 1. Разрешить   Запустить инструмент и продолжить.                                                                               
    2. Отменить  Отменить этот вызов инструмента.                                                                                    
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  Enter — подтвердить | Esc — отменить
