codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__mcp_server_elicitation__tests__mcp_server_elicitation_approval_form_with_session_persist.snap
---
source: tui/src/bottom_pane/mcp_server_elicitation.rs
expression: "render_snapshot(&overlay, Rect::new(0, 0, 120, 16))"
---
                                                                                                                        
  Поле 1/1                                                                                                             
  Разрешить этот запрос?                                                                                                   
  › 1. Разрешить                   Запустить инструмент и продолжить.                                                               
    2. Разрешить до конца сессии  Запустить инструмент и запомнить выбор до конца текущей сессии.                                  
    3. Всегда разрешать            Запустить инструмент и запомнить выбор для будущих вызовов.                             
    4. Отменить                  Отменить этот вызов инструмента.                                                                    
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  Enter — подтвердить | Esc — отменить
