codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__mcp_server_elicitation__tests__mcp_server_elicitation_boolean_form.snap
---
source: tui/src/bottom_pane/mcp_server_elicitation.rs
expression: "render_snapshot(&overlay, Rect::new(0, 0, 120, 16))"
---
                                                                                                                        
  Поле 1/1 (1 обязательный вопрос без ответа)                                                                                     
  Разрешить этот запрос?                                                                                                   
                                                                                                                        
  Подтвердить                                                                                                               
  Подтвердить ожидающее действие.                                                                                           
  › 1. Да                                                                                                             
    2. Нет                                                                                                            
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  Enter — подтвердить | Esc — отменить
